# simple_follower

./: CMakeLists.txt  README.md  limo_handover_document.md  package.xml  todo.md
cfg/: Params_PID.cfg  Params_color.cfg  arPID.cfg  laser_params.cfg
launch/: laser_follower.launch
launch/nodes/: laserTracker.launch  laserfollow.launch
msg/: position.msg
parameters/: PID_laser_param.yaml
scripts/: 1.py  laserTracker.py  laser_follow.py  laser_follow_cx.py  testCode.py
src/: avoidance.cpp  avoidance_cx.cpp  obs_avo.cpp
